bpo-33509: Fix _warnings for module_globals=None

Don't crash on warnings.warn_explicit() if module_globals is None.